Integrate Semaphore SMS API and add customer management
- Add Semaphore SMS API client with full API support
- Add secure API key configuration in private repo
- Implement customer database and management features
- Create SmsSchedulerWebSemaphore service for web apps
- Add comprehensive FlutterFlow integration guide
- Add ready-to-use custom actions for FlutterFlow
- Fix missing uuid dependency
- Add quick start guide for 5-minute setup
- Add analysis report documenting package structure

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   
   # Date/time utilities
   intl: '>=0.18.1 <0.21.0'
+  
+  # UUID generation
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
